--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # react-bootstrap==1.0.1
 # react-dom==16.13.1
 
+astroid==2.4.1
 backcall==0.1.0
 decorator==4.4.0
 Django==2.2.8
@@ -10,3 +11,27 @@ django-extensions==2.2.3
 django-filter==2.2.0
 djangorestframework==3.10.3
 djangorestframework-simplejwt==4.3.0
+ipdb==0.13.2
+ipython==7.14.0
+ipython-genutils==0.2.0
+isort==4.3.21
+jedi==0.17.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pkg-resources==0.0.0
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
+PyJWT==1.7.1
+pylint==2.5.2
+pytz==2020.1
+six==1.14.0
+sqlparse==0.3.1
+toml==0.10.0
+traitlets==4.3.3
+typed-ast==1.4.1
+wcwidth==0.1.9
+wrapt==1.12.1
