--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ django-cors-headers==3.1.1
 django-extensions==2.2.3
 django-filter==2.2.0
 djangorestframework==3.10.3
-djangorestframework-simplejwt==4.3.0
+django-rest-knox=4.1.0
+# djangorestframework-simplejwt==4.3.0
