--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-input-calendar": "^0.5.4",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
