--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "mdbreact": "^4.27.0",
     "moment": "^2.26.0",
     "moment-range": "^4.0.2",
     "react": "^16.13.1",
