--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ isort==4.3.21
 jedi==0.17.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+numpy==1.18.5
+pandas==1.0.4
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -30,6 +32,7 @@ pyflakes==2.2.0
 Pygments==2.6.1
 PyJWT==1.7.1
 pylint==2.5.2
+python-dateutil==2.8.1
 pytz==2020.1
 rope==0.17.0
 six==1.14.0
@@ -39,3 +42,4 @@ traitlets==4.3.3
 typed-ast==1.4.1
 wcwidth==0.1.9
 wrapt==1.12.1
+xlrd==1.2.0
